@@ -4,6 +4,8 @@ importFrom(MASS, cov.trob, polr, rlm)
 importFrom(nnet, multinom)
 importFrom(pbkrtest, KRmodcomp, KRmodcomp.lmerMod, KRmodcomp.mer, 
            vcovAdj, vcovAdj.lmerMod, vcovAdj.mer)
+importFrom(mgcv, gam, s)
+importFrom(quantreg, rqss, qss, fitted.rqss)
 
 export(
     basicPowerAxis,
